gcc/testsuite/gm2/iso/const/fail/testabs.mod
MODULE testabs ;

CONST
   foo = ABS (i + 1) ;

VAR
   i: INTEGER ;
BEGIN

END testabs.
